# fileforge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fileforge.toml.example  pyproject.toml
docs/: api.md  architecture.md  overview.md  setup.md  tech-stack.md
docs/superpowers/plans/: 2026-04-15-phase2-fileforge.md  2026-04-15-phase3-fileforge.md  2026-04-15-phase4-fileforge.md
frontend/: README.md  index.html
scripts/: check.sh  install.sh  release.sh
src/fileforge/: __init__.py  __main__.py  cli.py  config.py  db.py  models.py  scanner.py
src/fileforge/actions/: archiver.py  mover.py  trash.py
src/fileforge/ai/: __init__.py  classifier.py
src/fileforge/analysis/: __init__.py  dedup.py  embeddings.py  staleness.py  versions.py
src/fileforge/api/: server.py
src/fileforge/extractor/: __init__.py  docx.py  pdf.py  text.py
src/fileforge/report/: generator.py  html_generator.py
src/fileforge/schedule/: __init__.py  job_manager.py
src/fileforge/systemd/: fileforge-scan.service  fileforge-scan.timer  install.sh
src/fileforge/watch/: __init__.py  watcher.py
templates/: report.html
tests/: conftest.py  test_actions_archiver.py  test_actions_db.py  test_actions_mover.py  test_actions_trash.py  test_classifier.py  test_cli_dupes.py  test_cli_organize.py  test_cli_scan.py  test_cli_watch_schedule.py  test_config.py  test_db.py  test_dedup.py  test_embeddings.py  test_extractor.py  test_html_generator.py  test_interactive_cli.py  test_scanner.py  test_schedule_job_manager.py  test_staleness.py  test_systemd_integration.py  test_versions.py  test_watch_schedule_config.py  test_watch_watcher.py
