[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fileforge"
version = "0.1.1"
description = "AI-powered file organizer using local Ollama inference"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["file-organization", "ai", "ollama", "deduplication", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "platformdirs>=4",
    "pdfplumber>=0.11",
    "python-docx>=1",
    "openpyxl>=3",
    "beautifulsoup4>=4",
    "chardet>=5",
    "Pillow>=10",
    "ollama>=0.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "Jinja2>=3",
    "watchdog>=4",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "black", "ruff"]
ann = ["hnswlib>=0.8"]
ocr = ["pytesseract>=0.3"]
web = ["fastapi>=0.115", "uvicorn>=0.32"]

[project.urls]
Homepage = "https://github.com/coreconduit/fileforge"
Issues = "https://github.com/coreconduit/fileforge/issues"

[project.scripts]
fileforge = "fileforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fileforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
